upload image to s3

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/shubhamkhatik/fsjs2.0-backend#readme",
   "dependencies": {
+    "aws-sdk": "^2.1362.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
