--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
 MONGODB_URL=mongodb://localhost:27017/ecomm
-JWT_SECRET="shubhamkhatik"
-JWT_EXPIRY="7d"
+JWT_SECRET="shubham@khatik"
+JWT_EXPIRY=12h
 # aws credential 
 S3_ACCESS_KEY=youraccesskey
 S3_SECRET_ACCESS_KEY=yoursecretaccesskey
