--- a/.env
+++ b/.env
@@ -8,3 +8,15 @@ S3_SECRET_ACCESS_KEY=yoursecretaccesskey
 S3_BUCKET_NAME=yourbucketname
 S3_REGION=yourregion
 
+
+# nodemailer
+SMTP_MAIL_HOST=smtp.mailtrap.io
+SMTP_MAIL_PORT=2525
+SMTP_MAIL_USERNAME=yourusername
+SMTP_MAIL_PASSWORD=yourpassword
+SMTP_SENDER_EMAIL=some@mailtrap.com
+
+# //razorpay
+RAZORPAY_KEY_ID=yourkeyid
+RAZORPAY_SECRET=yoursecret
+
