--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ S3_REGION=yourregion
 
 
 # nodemailer
-SMTP_MAIL_HOST=smtp.mailtrap.io
+SMTP_MAIL_HOST=sandbox.smtp.mailtrap.io
 SMTP_MAIL_PORT=2525
-SMTP_MAIL_USERNAME=yourusername
-SMTP_MAIL_PASSWORD=yourpassword
+SMTP_MAIL_USERNAME=332c384fae06ea
+SMTP_MAIL_PASSWORD=c0837f51cc6521
 SMTP_SENDER_EMAIL=some@mailtrap.com
 
 # //razorpay
